<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:title="@string/options_remote_commands"
        android:summary="@string/options_remote_commands2"
        android:defaultValue="false"
        android:key="stealthRemote"
        />

    <CheckBoxPreference
        android:title="@string/options_use_telno"
        android:summary="@string/options_use_telno2"
        android:defaultValue="false"
        android:key="trustedLock"
        />

    <EditTextPreference
        android:title="@string/options_alert_telno"
        android:summary="@string/options_alert_telno2"
        android:key="alertSMSNo"
        />

    <CheckBoxPreference
        android:title="@string/options_sim_switch"
        android:summary="@string/options_sim_switch2"
        android:defaultValue="false"
        android:key="sim_switch"
        />

</PreferenceScreen>
