<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.samourai.wallet.whirlpool.WhirlPoolMain">



    <item android:id="@+id/action_utxo"
        android:title="@string/options_utxo"
        android:icon="@drawable/ic_list_alt_white"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/action_scan_qr"
        android:icon="@drawable/ic_crop_free_white_24dp"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/scan" />

    <item android:id="@+id/action_menu_view_post_mix"
        android:title="@string/post_mix_transactions"
        app:showAsAction="never"
        />

    <item android:id="@+id/action_scode"
        android:title="@string/scode"
        app:showAsAction="never"
        />
</menu>
