<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_show_qr"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_receive_qr"
        />
    <item android:id="@+id/claim_paynym"
        android:title="@string/claim_paynym"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/sym_contact_card"
        />
    <item android:id="@+id/action_unarchive"
        android:title="@string/action_unarchive"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
    <item android:id="@+id/action_sync_all"
        android:title="@string/action_sync_all"
        android:orderInCategory="100"
        android:showAsAction="never"
        />
</menu>
