<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_light"
            android:text="@string/type_address" />

        <Spinner
            android:id="@+id/address_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_light"
            android:text="@string/enter_index" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/index"
            android:text="0"
            android:layout_gravity="center_horizontal"
            android:textColorHint="@color/primary_light"
            android:textColor="@color/primary_light"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/chain_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_light"
            android:text="@string/chain_id" />

        <RadioGroup
            android:id="@+id/chain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/receive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_chain"
                android:checked="true" />

            <RadioButton
                android:id="@+id/change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_chain" />

        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        >

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/cancel"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/ok"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>
